# nugraph

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  nugraph-cpu.yaml  nugraph-gpu.yaml  numl.def  numl.yaml  process_batch.sh  process_protodune.sh  pyproject.toml  resume_train.sh  run_nugraph_train.sh  setup-env.sh  spack.yaml  train_multi_input.py
nugraph/: README.md  __init__.py  meta.yaml  pyproject.toml
nugraph/data/: BalanceSampler.py  H5DataModule.py  H5Dataset.py  OutlierSampler.py  SampleSizes.py  SkewSampler.py  __init__.py
nugraph/models/: NuGraph2.py  __init__.py  decoders.py  encoder.py  linear.py  nexus.py  plane.py
nugraph/models/nugraph2/: NuGraph2.py  decoders.py  nexus.py  plane.py
nugraph/models/nugraph3/: NuGraph3.py  __init__.py  core.py  decoders.py  instance.py  interaction.py  nexus.py  nugraph3.py  plane.py
nugraph/notebooks/: train.ipynb
nugraph/nugraph/: __init__.py  training-using-instance-decoder.py
nugraph/nugraph/data/: H5DataModule.py  H5Dataset.py  __init__.py  data_module.py  dataset.py
nugraph/nugraph/util/: FeatureExtension.py  FeatureNorm.py  LogCoshLoss.py  ObjCondensationLoss.py  RecallLoss.py  __init__.py  confusion_matrix_logger.py  event_labels.py  feature_extension.py  feature_norm.py  (+6 more)
nugraph/scripts/: compile.py  plot.py  prepare.py  train.py  train_batch.sh
nugraph/tests/: test_compile.py  test_train.py
nugraph/util/: FeatureNorm.py  FocalLoss.py  LogCoshLoss.py  ObjCondensationLoss.py  PositionFeatures.py  RecallLoss.py  __init__.py  hierarchical_edges.py  scriptutils.py
(+115 files in other folders)
